// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Callout renders correctly 1`] = `
<div>
  <div
    class="css-1gkhklp-boxStyles"
  >
    <div
      class="css-1iiypnu-boxStyles-Callout"
    >
      <h2
        class="css-pkkmd5-boxStyles"
      >
        Callout heading
      </h2>
      <p
        class="css-dbscsh-boxStyles"
      >
        Description of the callout.
      </p>
    </div>
  </div>
</div>
`;

exports[`Callout with compact variant and info tone renders correctly 1`] = `
<div>
  <div
    class="css-tgtnb7-boxStyles"
  >
    <div
      class="css-vspen0-boxStyles"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-1fy6eq9-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-1be1aj7-boxStyles-Callout"
    >
      <h2
        class="css-1atkru2-boxStyles"
      >
        Callout heading
      </h2>
      <p
        class="css-dbscsh-boxStyles"
      >
        Description of the callout.
      </p>
    </div>
  </div>
</div>
`;

exports[`Callout with compact variant and neutral tone renders correctly 1`] = `
<div>
  <div
    class="css-1qwxuo7-boxStyles"
  >
    <div
      class="css-1be1aj7-boxStyles-Callout"
    >
      <h2
        class="css-1atkru2-boxStyles"
      >
        Callout heading
      </h2>
      <p
        class="css-dbscsh-boxStyles"
      >
        Description of the callout.
      </p>
    </div>
  </div>
</div>
`;

exports[`Callout with feature variant and info tone renders correctly 1`] = `
<div>
  <div
    class="css-10b68go-boxStyles"
  >
    <div
      class="css-vspen0-boxStyles"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-xo7am3-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-1iiypnu-boxStyles-Callout"
    >
      <h2
        class="css-s8h0nj-boxStyles"
      >
        Callout heading
      </h2>
      <p
        class="css-dbscsh-boxStyles"
      >
        Description of the callout.
      </p>
    </div>
  </div>
</div>
`;

exports[`Callout with feature variant and neutral tone renders correctly 1`] = `
<div>
  <div
    class="css-12qxj53-boxStyles"
  >
    <div
      class="css-1iiypnu-boxStyles-Callout"
    >
      <h2
        class="css-s8h0nj-boxStyles"
      >
        Callout heading
      </h2>
      <p
        class="css-dbscsh-boxStyles"
      >
        Description of the callout.
      </p>
    </div>
  </div>
</div>
`;

exports[`Callout with regular variant and info tone renders correctly 1`] = `
<div>
  <div
    class="css-15cw9y2-boxStyles"
  >
    <div
      class="css-vspen0-boxStyles"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-1fy6eq9-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-1iiypnu-boxStyles-Callout"
    >
      <h2
        class="css-pkkmd5-boxStyles"
      >
        Callout heading
      </h2>
      <p
        class="css-dbscsh-boxStyles"
      >
        Description of the callout.
      </p>
    </div>
  </div>
</div>
`;

exports[`Callout with regular variant and neutral tone renders correctly 1`] = `
<div>
  <div
    class="css-1gkhklp-boxStyles"
  >
    <div
      class="css-1iiypnu-boxStyles-Callout"
    >
      <h2
        class="css-pkkmd5-boxStyles"
      >
        Callout heading
      </h2>
      <p
        class="css-dbscsh-boxStyles"
      >
        Description of the callout.
      </p>
    </div>
  </div>
</div>
`;
